core/compiler/tests/programs/ok/import_module_multiple/B.loz
import Maybe

mapMaybe :: (Maybe a) (a -> b) -> Maybe b
mapMaybe Nothing _ = Nothing
mapMaybe (Just a) f = Just (f a)