core/compiler/tests/programs/type_err/import_function_already_defined/A.loz
import B

f :: Int Int -> Int
f a b = b * a

main = f 3 15